--- a/sjtuthesis.cls
+++ b/sjtuthesis.cls
@@ -18,7 +18,9 @@
 \DeclareOption{submit}{\sjtu@submittrue}
 \DeclareOption*{\PassOptionsToClass{\CurrentOption}{ctexbook}}
 \ProcessOptions\relax
-\LoadClass[a4paper,UTF8,scheme=chinese]{ctexbook}
+%\LoadClass[a4paper,UTF8]{ctexbook}
+%\LoadClass[a4paper,UTF8,scheme=english]{ctexbook}
+\LoadClass[a4paper,UTF8]{ctexbook}
 \ifsjtu@bachelor\relax\else
   \ifsjtu@master\relax\else
     \ifsjtu@doctor\relax\else
@@ -27,6 +29,7 @@
     \fi
   \fi
 \fi
+
 
 %% sjtuthesis.cls segments
 % 0. Import sjtuthesis.cfg
@@ -60,8 +63,10 @@
 \RequirePackage{upgreek}
 \RequirePackage{graphicx}
 \RequirePackage{subfigure}
-\RequirePackage{ccaption}
-\RequirePackage[backend=biber, style=caspervector,utf8, bibencoding=utf8, sorting=none]{biblatex}
+%\RequirePackage{ccaption}
+%\RequirePackage[backend=bibtex, style=caspervector,utf8, bibencoding=utf8, sorting=none]{biblatex}
+%change here to import bibtex instead of bibter
+\RequirePackage[backend=bibtex, bibencoding=utf8,sorting=none]{biblatex}
 \RequirePackage{xcolor}
 \RequirePackage{wasysym}
 \RequirePackage{listings}
@@ -71,10 +76,56 @@
 \RequirePackage[inline]{enumitem}
 \RequirePackage{pdfpages}
 \RequirePackage{calc}
-\RequirePackage{algorithm, algorithmic}
+%\RequirePackage{algorithm, algorithmic}
 \RequirePackage{siunitx}
 \RequirePackage{tikz}
 \usetikzlibrary{shapes.geometric, arrows}
+
+%Add here to import assumption
+\usepackage{amsthm}
+\usepackage{amsmath}
+{
+	\theoremstyle{plain}
+	\newtheorem{assumption}{Assumption}
+}
+\usepackage{amssymb}
+\usepackage{threeparttable}
+\usepackage{booktabs}
+
+\usepackage{algorithm}
+
+%% This package is used for setting the line spaces
+\usepackage{setspace}
+
+%% This package is important for change in the chapter's properties. 
+\usepackage{titlesec}
+
+
+%\usepackage{algpseudocode}
+\usepackage[noend]{algpseudocode}
+% \usepackage[noend]{algorithm2e}
+
+%\usepackage{varwidth}
+%\usepackage{bm}
+% This template can not work with following to packages, I don't know why.  
+%\usepackage{subfig}
+%\usepackage{multirow}
+%
+
+%change figure name and table name back to english
+%You should not add options when importing caption package, because there are conflicts with biblatex package. I don't know how to solve it.  
+%\usepackage[figurename=Figure , tablename=Table ]{caption}
+\usepackage{caption}
+\renewcommand{\figurename}{Figure}
+\renewcommand{\tablename}{Table}
+
+
+\newtheorem{definition}{Definition}
+\newtheorem{theorem}{Theorem}
+\newtheorem{lemma}{Lemma}
+\newcommand{\ie}{\textit{i}.\textit{e}., }
+\newcommand{\eg}{\textit{e}.\textit{g}., }
+
 
 %==========
 % Segment 2. Define general-purpose LaTeX commands.
@@ -120,7 +171,7 @@
 \setmainfont{TeX Gyre Termes}
 
 %% 行距缩放因子
-\linespread{1.3}
+\linespread{1.5}
 
 %% CTeX Settings
 % 名称：目录、表格索引、插图索引、算法、算法索引、代码
@@ -131,13 +182,25 @@
 \renewcommand{\listalgorithmname}{\sjtu@listalgorithmname}
 \renewcommand{\lstlistingname}{\sjtu@value@listingname}
 % Title Settings at the chapter Level
+
+
+%Change the format of each chapter
 \ctexset{chapter={
-	nameformat={\Large\bfseries},
-	titleformat={\Large\bfseries},
-	beforeskip={15\p@},
-	afterskip={12\p@},
+	format = {\vspace*{-10\p@}},
+	number = {Chapter~\thechapter },
+	name = {,},
+%	beforeskip={0\p@ },
+%	afterskip={0\p@},
 	}
 }
+
+%Change the number of each chapter
+\titleformat{\chapter}{\centering\Large\bfseries}{Chapter\,\thechapter\,}{1em}{}
+
+%Change the top-margin of each chapter
+\titlespacing*{\chapter}{0pt}{10pt}{40pt}
+
+
 % Title Settings at the section Level
 \ctexset{section={
 	format={\large\bfseries},
@@ -159,6 +222,20 @@
 	}
 }
 
+%\CTEXsetup[number={Chapter~\thechapter }]{chapter}
+%\CTEXsetup[name={,}]{chapter}                             
+%\CTEXsetup[beforeskip={-22pt}]{chapter}
+
+%\CTEXsetup[name={,}]{chapter} 
+%\CTEXsetup[number={\arabic{chapter}}]{chapter} 
+%\CTEXsetup[format={\noindent}]{chapter} 
+%\CTEXsetup[nameformat={\bfseries\sihao \centering \kaishu}]{chapter} 
+%\CTEXsetup[titleformat={\bfseries\sihao \centering \kaishu}]{chapter} 
+%\CTEXsetup[beforeskip={6pt minus -22pt}]{chapter} 
+%\CTEXsetup[afterskip={6pt}]{chapter} 
+
+  
+
 % bullets in the item
 \renewcommand{\labelitemi}{\ensuremath{\bullet}}
 
@@ -167,9 +244,9 @@
 \DeclareGraphicsExtensions{.pdf,.eps,.png,.jpg,.jpeg}
 
 % Caption setting in ccaption pacakge
-\captiondelim{\ }
-\captionnamefont{\kaishu\small}
-\captiontitlefont{\kaishu\small}
+%\captiondelim{\ }
+%\captionnamefont{\kaishu\small}
+%\captiontitlefont{\kaishu\small}
 
 % Floating parameters
 \renewcommand{\textfraction}{0.15}
@@ -287,7 +364,8 @@
 \newcommand\confidential[1]{\def\sjtu@value@confidential{#1}}
 \newcommand\school[1]{\def\sjtu@value@school{#1}}
 \newcommand\chinesedegree[1]{\def\sjtu@value@chinesedegree{#1}}
-\renewcommand\title[2][\sjtu@value@title]{%
+%\renewcommand\title[2][\sjtu@value@title]{%
+\renewcommand\title[2][\sjtu@value@englishtitle]{%
   \def\sjtu@value@title{#2}
   \def\sjtu@value@titlemark{\MakeUppercase{#1}}}
 \renewcommand\author[1]{\def\sjtu@value@author{#1}}
@@ -299,41 +377,100 @@
 \newcommand\institute[1]{\def\sjtu@value@institute{#1}}
 \newcommand\chairman[1]{\def\sjtu@value@chairman{#1}}
 
-% “绘制”SJTU中文标题页
+\def\sjtu@underline[#1]#2{%
+  \CTEXunderline{\hbox to #1{\hfill#2\hfill}}}
+\def\sjtuunderline{\@ifnextchar[\sjtu@underline\CTEXunderline}
+
+
+% “绘制”SJTU中文标题页 - v0.9.3
+%\renewcommand\maketitle[1]{%
+%  \cleardoublepage
+%  \thispagestyle{empty}
+%  \begin{center}
+%  {\songti\zihao{-3}\sjtu@label@statement}
+%  \vskip\stretch{1}
+%  {\heiti\zihao{3}\sjtu@value@title}
+%  \vskip\stretch{1}
+%  {\fangsong\zihao{4}}
+%  \def\tabcolsep{1pt}
+%  \def\arraystretch{1.5}
+%  \begin{tabular}{rl}
+%    \ifsjtu@review
+%      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@author\end{CJKfilltwosides} & \underline{\makebox[150pt]{}}\\
+%      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@studentnumber\end{CJKfilltwosides} & \underline{\makebox[150pt]{}} \\
+%      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@advisor\end{CJKfilltwosides}  & \underline{\makebox[150pt]{}} \\ 
+%      \ifx\sjtu@value@coadvisor\undefined\else
+%        \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@coadvisor\end{CJKfilltwosides} & \underline{\makebox[150pt]{}} \\ 
+%      \fi
+%    \else
+%      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@author\end{CJKfilltwosides}	& \underline{\makebox[150pt]{\sjtu@value@author}} \\
+%      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@studentnumber\end{CJKfilltwosides} & \underline{\makebox[150pt]{\sjtu@value@studentnumber}} \\
+%      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@advisor\end{CJKfilltwosides} 	 & \underline{\makebox[150pt]{\sjtu@value@advisor}} \\ 
+%      \ifx\sjtu@value@coadvisor\undefined\else
+%        \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@coadvisor\end{CJKfilltwosides} 	 & \underline{\makebox[150pt]{\sjtu@value@coadvisor}} \\ 
+%      \fi
+%    \fi
+%      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@major\end{CJKfilltwosides} 	 & \underline{\makebox[150pt]{\sjtu@value@major}} \\
+%      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@defenddate\end{CJKfilltwosides} 	 & \underline{\makebox[150pt]{\sjtu@value@defenddate}}
+%  \end{tabular}
+%  \end{center}
+%  \vskip \stretch{0.5}
+%  \cleardoublepage
+%}
+
+% “绘制”SJTU中文标题页 - v0.5.2 - for english version
 \renewcommand\maketitle[1]{%
   \cleardoublepage
   \thispagestyle{empty}
   \begin{center}
-  {\songti\zihao{-3}\sjtu@label@statement}
-  \vskip\stretch{1}
-  {\heiti\zihao{3}\sjtu@value@title}
-  \vskip\stretch{1}
-  {\fangsong\zihao{4}}
-  \def\tabcolsep{1pt}
-  \def\arraystretch{1.5}
-  \begin{tabular}{rl}
-    \ifsjtu@review
-      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@author\end{CJKfilltwosides} & \underline{\makebox[150pt]{}}\\
-      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@studentnumber\end{CJKfilltwosides} & \underline{\makebox[150pt]{}} \\
-      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@advisor\end{CJKfilltwosides}  & \underline{\makebox[150pt]{}} \\ 
-      \ifx\sjtu@value@coadvisor\undefined\else
-        \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@coadvisor\end{CJKfilltwosides} & \underline{\makebox[150pt]{}} \\ 
-      \fi
-    \else
-      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@author\end{CJKfilltwosides}	& \underline{\makebox[150pt]{\sjtu@value@author}} \\
-      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@studentnumber\end{CJKfilltwosides} & \underline{\makebox[150pt]{\sjtu@value@studentnumber}} \\
-      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@advisor\end{CJKfilltwosides} 	 & \underline{\makebox[150pt]{\sjtu@value@advisor}} \\ 
-      \ifx\sjtu@value@coadvisor\undefined\else
-        \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@coadvisor\end{CJKfilltwosides} 	 & \underline{\makebox[150pt]{\sjtu@value@coadvisor}} \\ 
-      \fi
-    \fi
-      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@major\end{CJKfilltwosides} 	 & \underline{\makebox[150pt]{\sjtu@value@major}} \\
-      \begin{CJKfilltwosides}{4em}\heiti\sjtu@label@defenddate\end{CJKfilltwosides} 	 & \underline{\makebox[150pt]{\sjtu@value@defenddate}}
-  \end{tabular}
+\begin{figure}[!htp]
+ \centering
+ \includegraphics[angle=0,origin=br,width=13cm]{figure/sjtu.jpg}
+\end{figure}
+\heiti\zihao{-2}\sjtu@label@sjtu
+\vskip 15pt
+\kaishu\zihao{1}\sjtu@label@statement
+\vskip 5pt
+\heiti\zihao{-2}\sjtu@label@bacheloreng
+\begin{figure}[!htp]
+ \centering
+ \includegraphics[angle=0,origin=br,width=4cm]{figure/sjtulogo.pdf}
+\end{figure}
+    \vskip 20pt
+    \begin{tabular}{ll}
+    \huge{\kaishu\sjtu@label@title:} &\kaishu
+\sjtuunderline[350pt]{\sjtu@value@title}
+    \end{tabular}
+    \vskip 5pt
+    {\fangsong\zihao{4}}
+    \def\tabcolsep{1pt}
+    \def\arraystretch{1}
+    \begin{tabular}{lc}
+      \kaishu{\sjtu@label@studentname} &\kaishu
+      \sjtuunderline[250pt]{\sjtu@value@studentname}
+    \\
+      \kaishu{\sjtu@label@studentnumber} &\kaishu
+      \sjtuunderline[250pt]{\sjtu@value@studentnumber}
+    \\
+      \kaishu{\sjtu@label@major} &\kaishu
+      \sjtuunderline[250pt]{\sjtu@value@major}
+    \\  
+      \kaishu{\sjtu@label@advisor} &\kaishu
+      \sjtuunderline[250pt]{\sjtu@value@advisor}
+    \\  
+      \kaishu{\sjtu@label@institution} &\kaishu
+      \sjtuunderline[250pt]{\sjtu@value@institution}
+    \end{tabular}
   \end{center}
   \vskip \stretch{0.5}
-  \cleardoublepage
+  \clearpage
+  \if@twoside
+    \thispagestyle{empty}
+    \ifsjtu@typeinfo
+    \fi
+    \cleardoublepage
 }
+
 
 
 % English Title Page
@@ -422,7 +559,7 @@
 	  \fancyhf{}
 	  \fancyhead[L]{\includegraphics[width=0.22\textwidth]{figure/sjtubanner}}
 	  \fancyhead[R]{\nouppercase{\small\kaishu\sjtu@value@titlemark}}
-	  \fancyfoot[C]{\small 第~{\bfseries\thepage}~页\,共~{\bfseries\pageref{LastPage}}~页}
+	  \fancyfoot[C]{\small {\bfseries\thepage}/{\bfseries\pageref{LastPage}}}
 	  \renewcommand{\headheight}{32pt}
 	}
 	%% 开章页页眉页脚
@@ -430,7 +567,7 @@
 	  \fancyhf{}%
 	  \fancyhead[L]{\nouppercase{\small\kaishu\includegraphics[width=0.22\textwidth]{figure/sjtubanner}}}
 	  \fancyhead[R]{\nouppercase{\small\kaishu\sjtu@value@titlemark}}
-	  \fancyfoot[C]{\small 第~{\bf\thepage}~页\,共~{\bf\pageref{LastPage}}~页}
+	  \fancyfoot[C]{\small {\bf\thepage}/{\bf\pageref{LastPage}}}
 	  \renewcommand{\headheight}{32pt}
 	}
 \else
