--- a/tex/id.tex
+++ b/tex/id.tex
@@ -1,5 +1,5 @@
 %# -*- coding: utf-8-unix -*-
-\title{上海交通大学学位论文 \LaTeX 模板示例文档}
+\title{中文标题}
 \author{某\quad{}某}
 \advisor{某某教授}
 % \coadvisor{某某教授}
@@ -9,7 +9,7 @@
 \studentnumber{0010900990}
 \major{某某专业}
 
-\englishtitle{A Sample Document for \LaTeX-basedd SJTU Thesis Template}
+\englishtitle{English Title}
 \englishauthor{\textsc{Mo Mo}}
 \englishadvisor{Prof. \textsc{Mou Mou}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
