--- a/tex/symbol.tex
+++ b/tex/symbol.tex
@@ -1,6 +1,6 @@
 %# -*- coding: utf-8-unix -*-
-\chapter{主要符号对照表}
-\label{chap:symb}
+\chapter{Symbol}
+\label{chap:symbols}
 
 \begin{longtable}{rl}
 $\epsilon$     & 介电常数 \\
