change readme about adding citations

--- a/thesis.tex
+++ b/thesis.tex
@@ -18,7 +18,7 @@
 % ]
 
 % 逐个导入参考文献数据库
-\addbibresource{thesis.bib}
+\addbibresource{bib/thesis.bib}
 % \addbibresource{bib/chap2.bib}
 
 \begin{document}
